# interpolation

./: .gitignore
include/Interpolation/: chebyshev_grid.hh  default.hh  gauss_kronrod.hh  generic_grid.hh  grid_1d.hh  grid_concepts.hh  interpolation.hh  ogata.hh  ran2.hh  zeros.hh
run/: CMakeLists.txt  DY_example.cc
src/: chebyshev_grid.cc  gauss_kronrod.cc  generic_grid.cc  grid_1d.cc  ogata.cc
tests/: CMakeLists.txt  hankel_transform.cc  miscellaneous.cc  runge-kutta.cc  test_first_discr.cc  test_gauss_kronrod.cc  test_generic.cc  test_grid_1d.cc  test_ogata.cc  test_simple_test.cc
